# textplots-rs

./: .gitignore  Cargo.toml  README.md  run_examples.sh
.github/workflows/: rust.yml
examples/: color.rs  hist.rs  label.rs  liveplot.rs  multiple.rs  plot.rs  sparse_color.rs
src/: lib.rs  main.rs  scale.rs  utils.rs
