[package]
name = "textplots"
description = "Terminal plotting library."
version = "0.8.1"
authors = ["Alexey Suslov <alexey.suslov@gmail.com>"]
license = "MIT"
repository = "https://github.com/loony-bean/textplots-rs"
keywords = ["plotting", "unicode", "charts"]
categories = ["visualization"]
readme = "README.md"
edition = "2018"

[lib]
name = "textplots"
path = "src/lib.rs"

[[bin]]
name = "textplots"
path = "src/main.rs"

[badges]
travis-ci = { repository = "loony-bean/textplots-rs", branch = "master" }

[dependencies]
drawille = "0.3.0"
structopt = "0.3"
meval = "0.2"
rgb = "0.8.27"

[dev-dependencies]
ctrlc = "3"
console = "0.14"
