[package]
name = "textplots"
description = "Terminal plotting library."
version = "0.8.4"
authors = ["Alexey Suslov <alexey.suslov@gmail.com>"]
license = "MIT"
repository = "https://github.com/loony-bean/textplots-rs"
keywords = ["plotting", "unicode", "charts", "cli"]
categories = ["visualization", "command-line-interface"]
readme = "README.md"
edition = "2021"

[lib]
name = "textplots"
path = "src/lib.rs"

[[bin]]
name = "textplots"
path = "src/main.rs"
required-features = ["tool"]

[badges]
travis-ci = { repository = "loony-bean/textplots-rs", branch = "master" }

[features]
default = ["std"]

tool = [
    "meval",
    "structopt",
]

std = [
    "drawille",
    "rgb"
]

[dependencies]
# THESE CRATES ARE ENABLED BY DEFAULT
drawille-nostd = "0.1.2"
num-traits = { version = "0.2.16", default-features = false, features = ["libm"] }
# THESE CRATES ARE ENABLED ONLY BY THE CORRESPONDING FEATURES
drawille = { version = "0.3.0", optional = true }
structopt = { version = "0.3", optional = true }
meval = { version = "0.2", optional = true }
rgb = { version = "0.8.27", optional = true }


[dev-dependencies]
ctrlc = "3"
console = "0.15.7"
chrono = "0.4.30"
