[package]
name = "textplots"
description = "Terminal plotting library."
version = "0.8.6"
authors = ["Alexey Suslov <alexey.suslov@gmail.com>"]
license = "MIT"
repository = "https://github.com/loony-bean/textplots-rs"
keywords = ["plotting", "unicode", "charts", "cli"]
categories = ["visualization", "command-line-interface"]
readme = "README.md"
edition = "2021"

[lib]
name = "textplots"
path = "src/lib.rs"

[[bin]]
name = "textplots"
path = "src/main.rs"
required-features = ["tool"]

[badges]
travis-ci = { repository = "loony-bean/textplots-rs", branch = "master" }

[features]
tool = [
    "meval",
    "structopt",
]

[dependencies]
drawille = "0.3.0"
structopt = { version = "0.3", optional = true }
meval = { version = "0.2", optional = true }
rgb = "0.8.27"
axis_labels_rs = "0.4.0"

[dev-dependencies]
ctrlc = "3"
console = "0.15.7"
chrono = "0.4.30"
